--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <tr>
           <th colspan="2"><h1>Wine Festival Schedule</h1></th></tr>
         <tr>
-          <th><h2>Item</h2></th>
+          <th><h2>Time</h2></th>
           <th><h2>Event</h2></th>
         </tr>        
       </thead>
